SO-4446: Update startup scripts
- Use built-in JRE if JAVA_HOME is not defined
- Remove deprecated AlwaysLockClassLoader option
- Remove CMS garbage collector arguments
- Add --add-opens arguments for modules java.lang.reflect, java.lang,
java.util, java.time