@@ -4,12 +4,18 @@ rem Snow Owl Windows startup script
 if "%OS%" == "Windows_NT" setlocal
 
 rem Derive full path for script (includes trailing backslash)
-  set SCRIPT_DIR=%~dp0
+set SCRIPT_DIR=%~dp0
 
 rem Derive KERNEL_HOME full path from script's parent (no backslash)
-  for %%I in ("%SCRIPT_DIR%..") do set KERNEL_HOME=%%~fsI
+for %%I in ("%SCRIPT_DIR%..") do set KERNEL_HOME=%%~fsI
 
 set CONFIG_AREA=%KERNEL_HOME%/work
+
+IF DEFINED JAVA_HOME (
+	set JAVA_EXECUTABLE=%JAVA_HOME%/bin/java.exe
+) else (
+	set JAVA_EXECUTABLE=%KERNEL_HOME%/plugins/org.eclipse.justj.openjdk.hotspot.jre.full.win32.x86_64_16.0.1.v20210528-1205/jre/bin/java.exe
+)
 
 REM Heap settings
 set SO_JAVA_OPTS=%SO_JAVA_OPTS% -Xms6g
@@ -17,7 +23,7 @@ set SO_JAVA_OPTS=%SO_JAVA_OPTS% -Xmx6g
 set SO_JAVA_OPTS=%SO_JAVA_OPTS% -XX:+AlwaysPreTouch
 set SO_JAVA_OPTS=%SO_JAVA_OPTS% -Xss1m
 
-REM Equinox Config 
+REM Equinox Config
 set SO_JAVA_OPTS=%SO_JAVA_OPTS% -server
 set SO_JAVA_OPTS=%SO_JAVA_OPTS% -Djava.awt.headless=true
 set SO_JAVA_OPTS=%SO_JAVA_OPTS% -Dosgi.noShutdown=true
@@ -26,21 +32,21 @@ set SO_JAVA_OPTS=%SO_JAVA_OPTS% -Dosgi.console=2501
 
 REM Parallel classloader configuration
 set SO_JAVA_OPTS=%SO_JAVA_OPTS% -Dosgi.classloader.type=nonparallel
-set SO_JAVA_OPTS=%SO_JAVA_OPTS% -XX:+AlwaysLockClassLoader
 
-REM Jetty configuration 
+REM Jetty configuration
 set SO_JAVA_OPTS=%SO_JAVA_OPTS% -Djetty.port=8080
 
 REM GC configuration
-set SO_JAVA_OPTS=%SO_JAVA_OPTS% -XX:+UseConcMarkSweepGC
-set SO_JAVA_OPTS=%SO_JAVA_OPTS% -XX:CMSInitiatingOccupancyFraction=75
-set SO_JAVA_OPTS=%SO_JAVA_OPTS% -XX:+UseCMSInitiatingOccupancyOnly
 set SO_JAVA_OPTS=%SO_JAVA_OPTS% -XX:+HeapDumpOnOutOfMemoryError
 
 REM Misc configuration
+set SO_JAVA_OPTS=%SO_JAVA_OPTS% --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+set SO_JAVA_OPTS=%SO_JAVA_OPTS% --add-opens java.base/java.lang=ALL-UNNAMED
+set SO_JAVA_OPTS=%SO_JAVA_OPTS% --add-opens java.base/java.util=ALL-UNNAMED
+set SO_JAVA_OPTS=%SO_JAVA_OPTS% --add-opens java.base/java.time=ALL-UNNAMED
 set SO_JAVA_OPTS=%SO_JAVA_OPTS% -Djdk.security.defaultKeySize=DSA:1024
 
 REM Run Snow Owl
 PUSHD %KERNEL_HOME%
-"%JAVA_HOME%\bin\java" %SO_JAVA_OPTS% -jar plugins\org.eclipse.equinox.launcher_1.5.700.v20200207-2156.jar
+"%JAVA_EXECUTABLE%" %SO_JAVA_OPTS% -jar plugins\org.eclipse.equinox.launcher_1.5.800.v20200727-1323.jar
 POPD
